# CrossEngine

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  updateLibs.py
BallGame/: .gitignore  compileGame.bat
BallGame/assets/shaders/: fs_texture_shading.sc  varying.def.sc  vs_texture_shading.sc
BallGame/assets/shaders/metal/: fs_texture_shading.bin.d  vs_texture_shading.bin.d
BallGame/scripts/: ballgame.lua  genie.lua  shader.mk
BallGame/scripts/ballgameDebug.app/Contents/: Info.plist
BallGame/scripts/ballgameRelease.app/Contents/: Info.plist
BallGame/src/: App.cpp  App.h  Ball.cpp  Ball.h  BallController.cpp  BallRenderer.cpp  BallRenderer.h  Grid.cpp  Grid.h  Main.cpp  MainGame.cpp  MainGame.h  app.cpp  app.h  ball_controller.cpp  ball_controller.h  ball_renderer.cpp  ball_renderer.h  grid.h  main.cpp  main_game.cpp  main_game.h  screen_indexs.h
CrossEngine/: CMakeLists.txt
CrossEngine/scripts/: crossengine.lua  genie.lua
CrossEngine/src/: audio_engine.cpp  bgfx_utils.cpp  bounds.cpp  camera.cpp  camera_2d.cpp  cross_engine.cpp  cross_errors.cpp  i_main_game.cpp  image_loader.cpp  input_manager.cpp  io_manager.cpp  partiche_batch_2d.cpp  particle_batch_2d.cpp  particle_engine_2d.cpp  resource_manager.cpp  screen_list.cpp  sprite.cpp  sprite_batch.cpp  texture_cache.cpp  timing.cpp  window.cpp
CrossEngine/src/CrossEngine/: AudioEngine.cpp  Camera2D.cpp  CrossEngine.cpp  CrossErrors.cpp  IMainGame.cpp  IOManager.cpp  ImageLoader.cpp  InputManager.cpp  ParticleBatch2D.cpp  ParticleEngine2D.cpp  PicoPNG.cpp  ResourceManager.cpp  ScreenList.cpp  Sprite.cpp  SpriteBatch.cpp  TextureCache.cpp  Timing.cpp  Window.cpp
CrossEngine/src/CrossEngine/CrossEngine/: AudioEngine.h  Camera2D.h  CppUtils.h  CrossEngine.h  CrossErrors.h  CrossTexture.h  IGameScreen.h  IMainGame.h  IOManager.h  ImageLoader.h  InputManager.h  ParticleBatch2D.h  ParticleEngine2D.h  PicoPNG.h  ResourceManager.h  ScreenList.h  Sprite.h  SpriteBatch.h  TextureCache.h  TileSheet.h  Timing.h  Vertex.h  Window.h
CrossEngine/src/crossengine/: audio_engine.h  bgfx_utils.h  camera.h  camera_2d.h  common.h  cpp_utils.h  cross_engine.h  cross_errors.h  cross_errors.inl  cross_math.h  cross_texture.h  error_manager.h  error_manager.inl  i_game_screen.h  i_main_game.h  image_loader.h  input_manager.h  io_manager.h  particle_batch_2d.h  particle_engine_2d.h  resource_manager.h  screen_list.h  sprite.h  sprite_batch.h  texture_cache.h  tile_sheet.h  timing.h  vertex.h  window.h
CrossEngine/src/nanovg/: fontstash.h
CrossEngine/test/: CMakeLists.txt
CrossEngine/test/src/: audio_engine_test.cpp  cross_engine_init_test.cpp
Pong/: Makefile  compileGame.sh
Pong/Assets/Pong/Sprites/: Pong.pyxel
Pong/scripts/: genie.lua  pong.lua
Pong/src/: App.cpp  App.h  Ball.cpp  Ball.h  Environment.cpp  Environment.h  GameplayScreen.cpp  GameplayScreen.h  Player.cpp  Player.h  app.cpp  app.h  ball.cpp  ball.h  environment.h  gameplay_screen.cpp  gameplay_screen.h  main.cpp  player.cpp  player.h  screen_indexs.h
Pong/src/Assets/Pong/GUI/fonts/: nokiafc22-10.font
Pong/src/shaders/: textureShading.frag  textureShading.vert
SpaceInvaders/: Makefile  compileGame.sh
SpaceInvaders/scripts/: crossengine.lua  genie.lua  spaceinvaders.lua
SpaceInvaders/src/: CrossEngine  helloworld.cpp
ci/: build_unix.sh
google_unittests/: CMakeLists.txt
